[gd_scene load_steps=2 format=2]

[ext_resource path="res://Levels/FriendsAndFoes.gd" type="Script" id=1]

[node name="FriendsAndFoes" type="YSort"]
script = ExtResource( 1 )

[node name="CenterRight" type="Position2D" parent="."]

[node name="CenterLeft" type="Position2D" parent="."]

[node name="FarRight" type="Position2D" parent="."]

[node name="FarLeft" type="Position2D" parent="."]

[node name="CenterTop" type="Position2D" parent="."]

[node name="DirectCenter" type="Position2D" parent="."]
